[gd_scene load_steps=8 format=3 uid="uid://b7sdx3ncibqyn"]

[ext_resource type="Script" path="res://Scripts/score.gd" id="1_544m1"]
[ext_resource type="Texture2D" uid="uid://c2uc54qrto6pl" path="res://Assets/Graphics/Score Background.png" id="2_uh63l"]
[ext_resource type="PackedScene" uid="uid://b5op8tn5ax030" path="res://Scenes/data.tscn" id="3_6rvnk"]
[ext_resource type="PackedScene" uid="uid://dfngbuwlbyse1" path="res://Scenes/scene_transition.tscn" id="5_4ln8i"]
[ext_resource type="PackedScene" uid="uid://cjnhkwa8nmm36" path="res://Scenes/Audio Manager.tscn" id="5_kpfwm"]
[ext_resource type="AudioStream" uid="uid://c4f0jqwuf2nv8" path="res://Assets/SFX/light click - 666HeroHero.mp3" id="6_ximg8"]
[ext_resource type="AudioStream" uid="uid://beiogaefep5g8" path="res://Assets/SFX/mechanical keyboard - freesound_community.mp3" id="7_6cw14"]

[node name="Score" type="Node2D"]
script = ExtResource("1_544m1")

[node name="Graphics" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="Graphics"]
z_index = -3
offset_left = -6.0
offset_top = -3.0
offset_right = 1158.0
offset_bottom = 652.0
texture = ExtResource("2_uh63l")
expand_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(574, 324)

[node name="UI" type="Node" parent="."]

[node name="Menu_button" type="Button" parent="UI"]
offset_left = 1066.0
offset_top = 22.0
offset_right = 1119.0
offset_bottom = 53.0
text = "Menu"

[node name="Clear_stats" type="Button" parent="UI"]
offset_left = 37.0
offset_top = 22.0
offset_right = 131.0
offset_bottom = 53.0
text = "Reset Stats"

[node name="Score_Display" type="RichTextLabel" parent="UI"]
offset_left = 37.0
offset_top = 98.0
offset_right = 989.0
offset_bottom = 563.0
theme_override_font_sizes/normal_font_size = 25
fit_content = true

[node name="Data" parent="." instance=ExtResource("3_6rvnk")]

[node name="AudioManager" parent="." instance=ExtResource("5_kpfwm")]

[node name="SceneTransition" parent="." instance=ExtResource("5_4ln8i")]

[node name="Sound Effects" type="Node" parent="."]

[node name="light click" type="AudioStreamPlayer" parent="Sound Effects"]
stream = ExtResource("6_ximg8")

[node name="button select" type="AudioStreamPlayer" parent="Sound Effects"]
stream = ExtResource("7_6cw14")

[connection signal="pressed" from="UI/Menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="UI/Clear_stats" to="." method="_on_clear_stats_pressed"]
